--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@types/react-dom": "18.2.4",
     "@types/react-window": "^1.8.5",
     "next": "13.4.4",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-button": "^0.7.2",
     "react-redux": "^8.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-virtualized-auto-sizer": "^1.0.20",
